services/serviceA/base/deployment-sample-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: service-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-a
    spec:
      containers:
      - name: service-a
        image: quay.io/jgwest-redhat/sample-workload:latest
        imagePullPolicy: Always
#        command:
#        - entrypoint.sh
        ports:
        - containerPort: 8080
