services/serviceA/base/route-sample-workload.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service-a
spec:
  subdomain: service-a
  to:
    kind: Service
    name: service-a
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
